2005-05-04 Francois Proulx <francois.proulx@gmail.com>
	* Fixed CSS IE Bug
	* Fixed SQL query
	* NEED HELP FROM A WEB DESIGNER !!!!!
	
2005-05-03 Francois Proulx <francois.proulx@gmail.com>
	* Disabled logging in Pattern Language archives
	
2005-05-03 Francois Proulx <francois.proulx@gmail.com>
	* Having for SQL query... :-(
	
2005-05-02 Francois Proulx <francois.proulx@gmail.com>
	* PatternLanguage is now completed
	
2005-04-30 Francois Proulx <francois.proulx@gmail.com>
	* Logout button will now destroy session AND render token USED
	
2005-04-30 Francois Proulx <francois.proulx@gmail.com>
	* Fixed bug that could potentially let non owners add content in /content through content groups
	* Admin menu won't show node selector if the user is not owner of at least one hotspot
	* Added Width, height support for Picture
	
2005-04-30 Francois Proulx <francois.proulx@gmail.com>
	* Did my best for content styling ... ( it's 5h00 am )
	
2005-04-30 Francois Proulx <francois.proulx@gmail.com>
	* Updated sync_sql_for_cvs.sh

2005-04-30 François Proulx <francois.proulx@gmail.com>
	* ChangeLog entry missed by CVS ?!
	* Locale now decomposes the locale string by '_'  
	* Now works on Mac OS X ( but you must use fr_CA, en_CA or fr_FR ... )
	
2005-04-30 François Proulx <francois.proulx@gmail.com>
	* Trying to solve RSS encoding bug...
	* Testing on live server
	
2005-04-29 François Proulx <francois.proulx@gmail.com>
	* Removed all inline unuseful javascript code on submit buttons onclick='submit()'
	* This conflicted with the actual click on the submit button in Safari
	* Fixed check in Network for isOwner, only check superAdmin
	* Fixed bug so you can't add an existing content group to itself ( deadlock )
	* Started coding Pattern language narrative display

2005-04-29 François Proulx <francois.proulx@gmail.com>
	* Wrote User.php addcontent, removeContent, getAllContent()
	* Wrote Content.php subscrite() and unsubscribe()