@@ -28,7 +28,7 @@ error_reporting(E_ALL);
 require_once BASEPATH.'config.php';
 require_once BASEPATH.'classes/AbstractDb.php';
 require_once BASEPATH.'classes/Session.php';
-define('REQUIRED_SCHEMA_VERSION', 14);
+define('REQUIRED_SCHEMA_VERSION', 15);
 
 /** Check that the database schema is up to date.  If it isn't, offer to update it. */
 function validate_schema()
@@ -413,9 +413,18 @@ function update_schema()
             		"width int4, ".
             		"height int4".
             		");\n";
-        }	
-	
-	
+        }
+        
+        $new_schema_version = 15;
+        if($schema_version < $new_schema_version)
+        {
+            echo "<h2>Preparing SQL statements to update schema to version  $new_schema_version</h2>\n";
+            $sql .= "\n\nUPDATE schema_info SET value='$new_schema_version' WHERE tag='schema_version';\n"; 
+            $sql .= "ALTER TABLE files ADD COLUMN data_blob oid;
+                    ALTER TABLE files ADD COLUMN local_binary_size int8;
+                    ALTER TABLE files DROP COLUMN binary_data;\n";
+        }   	
+        
 		$db->ExecSqlUpdate("BEGIN;\n$sql\nCOMMIT;\n", true);
 		echo "</html></head>";
 		exit ();
